# SORA-Space-Rental-System

./: .env.exemple  Cargo.toml  ReadMe.md  docker-compose.yml  exo_sora_modélisation.txt
migrations/2024-05-08-154843_create_tables/: up.sql
migrations/2024-05-09-133501_add_data/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: mod.rs
src/display/: add_office.rs  book_office.rs  database_menu.rs  description.rs  guest.rs  host.rs  indice.rs  login.rs  menu.rs  mod.rs  password.rs  registration.rs  reservation_office.rs  show_database.rs  show_guest_contract.rs  show_host_contract.rs  show_offices.rs  show_offices_user.rs  utils.rs
src/models/: contract.rs  mod.rs  office.rs  relation.rs  user.rs
src/repository/: contract.rs  office.rs  relation.rs  user.rs
src/services/: contract.rs  office.rs  relation.rs  user.rs
src/utils/: calendar_management.rs  mod.rs  user.rs
