[package]
name = "sora_modelization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.6", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.38"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
derive_more = "0.99.16"
async-trait = "0.1.51"
tokio = { version = "1.0.1", features = ["full"] }
once_cell = "1.10.0"
crossterm = "0.27.0"
termion = "4.0.0"
inquire = { version = "0.7", features = ["date"] }
colored = "2.0"
rand = "0.8.4"
nanoid = "0.4.0"